fixed contact page on mobile (#2)

--- a/resources/style/main_small.css
+++ b/resources/style/main_small.css
@@ -92,7 +92,7 @@
     }
 
     #contact_page_container {
-        height: auto;
+        height: auto !important;
     }
 
     #contact_page_table {
